--- a/events.html
+++ b/events.html
@@ -64,16 +64,20 @@
             <td>2 Sep 2024</td>
             <td>12 pm, Singapore Time</td>
             <td>CodeJam - Gear up for an exhilarating 48-hour coding competition. Are you up for the challenge?</td>
+            <td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button class="btn btn-primary">Sign up</button></a></td>
+            
           </tr>
           <tr>
             <td>9 Sep 2024</td>
             <td>8 pm, Singapore Time</td>
             <td>Game Night - Time to unwind with a fun-filled night of multiplayer games. Can you beat the reigning champ?</td>
+            <td><button class="btn btn-primary">Sign up</button></td>
           </tr>
           <tr>
             <td>23 Sep 2024</td>
             <td>5 pm, Singapore Time</td>
             <td>Tech Company Networking - We receive a valuable opportunity to network with individual from top tech companies which will allow our members to exchange ideas, knowledge and gain insights on what to expect upon graduation!</td>
+            <td><button class="btn btn-danger">Sold out</button></td>
           </tr>
         </tbody>
        
