--- a/practice.html
+++ b/practice.html
@@ -79,6 +79,17 @@
       </p>
     </div>
   </body>
+  <script>
+      const BestBoy="Cody"
+      console.log(BestBoy)
+    console.log("Hello World");
+    console.warn("Hello World");
+    console.error("Hello World");
+    const animal="Capybara"
+  console.log(animal)
+  let animals="BIG BIRD IS TOUCAN"
+  console.error(animals)
+  </script>
 </html>
 <button class="btn btn-primary">Click this and nothing will happen!</button>
 <button class="btn btn-danger">Click this and nothing will happen!</button>
@@ -110,6 +121,7 @@
 <button class="btn btn-light">Click this and nothing will happen!</button>
 <button class="btn btn-warning">Click this and nothing will happen!</button>
 <button class="btn btn-info">Click this and nothing will happen!</button>
+<td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button class="btn btn-seconary"">Click this and something will happen!</button></a></td>
 <button class="btn btn-seconary"">Click this and something will happen!</button>
 <button class="btn btn-dark">Click this and nothing will happen!</button>
 <button class="btn btn-primary">Click this and nothing will happen!</button>
