--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
 		<!-- Start Leading Text -->
 		<div class="py-3 bg-success bg-opacity-25">
 			<div class="container">
+				<h4>MUST READ THE BELOW(sorry if I sound rude)</h4>
+				<h3>Everything in this website/webpage? is not real and if you are interrested in coding, you can click <a href="https://www.computhink.com.sg/?utm_source=google&utm_medium=cpc&utm_campaign=WebsiteTraffic_PerformanceMax1&utm_term=&utm_content=%7Bad_id%7D&gad_source=1&gbraid=0AAAAADiyG31dUTsh1KJKtCxoog_Sch0Qz&gclid=Cj0KCQjw7Py4BhCbARIsAMMx-_J0ZVmqvKcmtmZvnMfgNFZg5llEy6KoWAgFbB11sOBAtjN-y1jp12AaAvQrEALw_wcB"><button class="btn btn-seconary"">here</button></a></h3>
 				<h3>Welcome!</h3>
 				<p>Hi! Welcome to Byte Buster Coding Club! The best coding club in the universe! You will code apps,websites and games, create, and conquer with our help! If you are a fan of all things digital, sign up for the time of your life!</p>
 				<div class="py-3 bg-light">
 			<div class="container">
 				<h3>Annoucements!</h3>
-				<p>Sign up for our new holiday camp!</p>
+				<p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Sign up for our new holiday camp!</a></p>
         <!-- (Leading Text 1) Add a <h3> class for the Welcome Note -->
         <!-- (Leading Text 2) Add a <p> paragraph with a short introduction -->
         
